--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ nav ul li a:hover {
     transition: 1s;
 }
 
-.welcome {
+.title {
     letter-spacing: 2rem;    
     color: white;
     font-size: 70px;
@@ -60,7 +60,6 @@ nav ul li a:hover {
     transform: translateX(-50%) translateY(-50%);    
     text-shadow: 10px 15px 20px black;
     font-family: 'Times New Roman', Times, serif;
-    
 }
 
 .about {
@@ -71,7 +70,7 @@ nav ul li a:hover {
 
 .about img {
     height: auto;
-    width: 600px;
+    width: 550px;
 }
 
 .about-text {
@@ -89,7 +88,7 @@ nav ul li a:hover {
 .about-text h3 {
     font-family: 'Poppins', sans-serif;
     color: black;
-    font-size: 20px;
+    font-size: 15px;
     text-transform: capitalize;
     margin-bottom: 30px;
 }
@@ -99,7 +98,7 @@ nav ul li a:hover {
     color: black;
     letter-spacing: 1px;
     line-height: 28px;
-    font-size: 18px;
+    font-size: 15px;
     margin-bottom: 45px;
 }
 
