--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
+/* INDEX and OTHER */
+
 * {
     margin: 0;
     padding: 0;
@@ -10,7 +12,7 @@
     font-family: 'Poppins', sans-serif;
     height: 100vh;
     width: 100%;
-    background-image: url("cherryBlossom.jpg");
+    background-image: url("cherryBlossom2.JPG");
     background-size: cover;
     background-position: center;
     
@@ -18,7 +20,6 @@
 
 #CB {
     width: 350px;
-    filter: brightness(10%);
 }
 
 nav {
@@ -48,13 +49,14 @@ nav ul li a:hover {
 }
 
 .title {
-    letter-spacing: 2rem;    
+    letter-spacing: 3rem;    
     color: white;
     font-size: 70px;
     margin: 0;
-    padding: 0;
+    padding-top: 300px;
+    padding-left: 70px;
     text-align: center;
-    position: absolute;
+    /* position: absolute; */
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);    
@@ -111,3 +113,96 @@ nav ul li a:hover {
     align-items: center;
     justify-content: space-around;
 }
+
+/* FOOTER */
+
+.footer ul {
+    position: absolute;
+    left: 50%;
+    padding-top: 20%;
+    padding-bottom: 20%;
+    margin: 0;
+    transform: translate(-50%, -50%);
+    display: flex;
+}
+
+.footer ul li {
+    list-style: none;
+    margin: 0 60px;
+}
+
+.footer ul li .fa-brands {
+    font-size: 40px;
+    line-height: 80px;
+    transition: 1.5s;
+    color: white;
+}
+
+.footer ul li .fa-brands:hover {
+    color: white;
+}
+
+.footer ul li:nth-child(1) a:hover {
+    background-color: #0077B5;
+}
+
+.footer ul li:nth-child(2) a:hover {
+    background-color: #e4405f;
+}
+
+.footer ul li:nth-child(3) a:hover {
+    background-color: red;
+}
+
+.footer ul li:nth-child(4) a:hover {
+    background-color: #1DB954;
+}
+
+.footer ul li a {
+    position: relative;
+    display: block;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: black;
+    text-align: center;
+    transition: .6s;
+}
+
+.footer ul li a:hover {
+    transform: translate(0, -10px);
+}
+
+
+/* MISSION */
+
+.hero2 {
+    font-family: 'Poppins', sans-serif;
+    height: 100vh;
+    width: 100%;
+    background-image: url("UW.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.mission {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    letter-spacing: .5rem;
+    font-family: 'Times New Roman', Times, serif;
+    padding: 250px;
+    text-align: center;
+}
+
+/* PROJECTS */
+
+.hero3 {
+    font-family: 'Poppins', sans-serif;
+    height: 100vh;
+    width: 100%;
+    background-image: url("MacBook.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+
