--- a/style.css
+++ b/style.css
@@ -187,12 +187,69 @@ nav ul li a:hover {
 
 .mission {
     font-family: 'Poppins', sans-serif;
-    font-size: 20px;
+    font-size: 30px;
     letter-spacing: .5rem;
     font-family: 'Times New Roman', Times, serif;
-    padding: 250px;
+    padding: 220px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.personalValueTitle {
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    padding-bottom: 50px;
+    text-align: center;
+    font-size: 40px;
+}
+
+.personalValues {
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.card {
+    flex: 1 1 21rem;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: column;
+    margin: 10px;
+    background: white;
+    box-shadow: 0 0 10px rgb(0,0,0,0.4);
+    padding: 40px;
+    align-self: normal;
+}
+
+.card img {
+    max-width: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
+
+}
+
+.card h4 {
+    font-size: 20px;
+    margin: 20px;
     text-align: center;
 }
+
+.card p {
+    text-align: center;
+    
+}
+
 
 /* PROJECTS */
 
@@ -205,4 +262,83 @@ nav ul li a:hover {
     background-position: center;
 }
 
+.Projects {
+    padding: 5px;
+}
 
+.Projects h2 {
+    padding-top: 200px;
+    padding-bottom: 50px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 50px;
+}
+
+.Projects img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+    border: 10px solid black;
+}
+
+.Projects h4 {
+    text-align: center;
+}
+
+.Projects p {
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    padding: 60px 50px 40px 50px;
+    font-size: 20px;
+}
+
+/* PROFESSIONAL */
+.hero4 {
+    font-family: 'Poppins', sans-serif;
+    height: 100vh;
+    width: 100%;
+    background-image: url("alki.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.title4 {
+    letter-spacing: 3rem;    
+    color: white;
+    font-size: 50px;
+    margin: 0;
+    padding-top: 300px;
+    padding-left: 70px;
+    text-align: center;
+    /* position: absolute; */
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);    
+    text-shadow: 10px 15px 20px black;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.PathwayU h2 {
+    padding-top: 200px;
+    padding-bottom: 50px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 50px;
+}
+
+.PathwayU img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+    max-width: 70%;
+    border: 10px solid black;
+}
+
+.PathwayU p {
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    padding: 60px 70px 40px 70px;
+    font-size: 20px;
+}
