--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ nav ul li a:hover {
     position: absolute;
     left: 50%;
     padding-top: 20%;
-    padding-bottom: 20%;
+    padding-bottom: 10%;
     margin: 0;
     transform: translate(-50%, -50%);
     display: flex;
@@ -236,6 +236,7 @@ nav ul li a:hover {
     margin-left: auto;
     margin-right: auto;
     width: 20%;
+    text-align: center;
 
 }
 
@@ -247,7 +248,30 @@ nav ul li a:hover {
 
 .card p {
     text-align: center;
-    
+}
+
+.PurposeDiagram h2 {
+    padding-top: 200px;
+    padding-bottom: 50px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 50px;
+}
+
+.PurposeDiagram img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+    max-width: 60%;
+    border: 10px solid black;
+}
+
+.PurposeDiagram p {
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    padding: 60px 200px 40px 200px;
+    font-size: 20px;
 }
 
 
@@ -289,7 +313,7 @@ nav ul li a:hover {
 .Projects p {
     font-family: 'Poppins', sans-serif;
     text-align: center;
-    padding: 60px 50px 40px 50px;
+    padding: 60px 80px 100px 80px;
     font-size: 20px;
 }
 
@@ -332,13 +356,348 @@ nav ul li a:hover {
     display: block;
     margin-left: auto;
     margin-right: auto; 
-    max-width: 70%;
+    max-width: 50%;
     border: 10px solid black;
 }
 
 .PathwayU p {
     font-family: 'Poppins', sans-serif;
     text-align: center;
-    padding: 60px 70px 40px 70px;
+    padding: 60px 200px 40px 200px;
     font-size: 20px;
 }
+
+.resume h2 {
+    padding-top: 200px;
+    padding-bottom: 50px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 50px;
+}
+
+.pdf {
+    margin-left: auto;
+    margin-right: auto; 
+    align-content: center;
+    padding-bottom: 50px;
+}
+
+.footerP ul {
+    position: absolute;
+    left: 50%;
+    padding-top: 20%;
+    padding-bottom: 10%;
+    margin: 0;
+    transform: translate(-50%, -50%);
+    display: flex;
+}
+
+.footerP ul li {
+    list-style: none;
+    margin: 0 60px;
+}
+
+.footerP ul li .fa-brands {
+    font-size: 40px;
+    line-height: 80px;
+    transition: 1.5s;
+    color: white;
+}
+
+.footerP ul li .fa-regular {
+    font-size: 40px;
+    line-height: 80px;
+    transition: 1.5s;
+    color: white;
+}
+
+.footerP ul li .fa-brands:hover {
+    color: white;
+}
+
+.footerP ul li:nth-child(1) a:hover {
+    background-color: #0077B5;
+}
+
+.footerP ul li:nth-child(2) a:hover {
+    background-color: #dbff53;
+}
+
+
+.footerP ul li a {
+    position: relative;
+    display: block;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: black;
+    text-align: center;
+    transition: .6s;
+}
+
+.footerP ul li a:hover {
+    transform: translate(0, -10px);
+}
+
+/*REFLECTION*/
+.hero5 {
+    font-family: 'Poppins', sans-serif;
+    height: 100vh;
+    width: 100%;
+    background-image: url("UW3.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.title5 {
+    letter-spacing: 3rem;    
+    color: white;
+    font-size: 50px;
+    margin: 0;
+    padding-top: 300px;
+    padding-left: 70px;
+    text-align: center;
+    /* position: absolute; */
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);    
+    text-shadow: 10px 15px 20px black;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.BiReflection h2 {
+    padding-top: 200px;
+    padding-bottom: 50px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 50px;
+}
+
+.BiReflection img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+    max-width: 30%;
+    border: 10px solid black;
+}
+
+.BiReflection p {
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    padding: 60px 200px 40px 200px;
+    font-size: 20px;
+}
+
+.firstYearPhotos h2 {
+    padding-top: 200px;
+    padding-bottom: 0px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 50px;
+}
+
+.firstYearPhotos h3 {
+    padding-bottom: 150px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 20px;
+}
+
+/*RIGHT*/
+.photoRight {
+    padding: 50px;
+    justify-content: center;
+    align-items: center;
+    min-height: 50vh;
+    margin: 150px auto;
+}
+
+.photoRight img {
+    border: 8px solid black;
+    max-width: 800px;
+    float: right;
+    margin-left: 20px;
+    
+}
+
+.photoRightText {
+    padding-top: 130px;
+    padding-right: 30px;
+}
+.photoRightText h3 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 40px;
+    text-align: center;
+    padding-bottom: 40px;
+}
+
+.photoRight p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    text-align: left;
+    padding-right: 30px;
+}
+
+/*CENTER*/
+.photoCenter {
+    padding: 50px;
+    justify-content: center;
+    align-items: center;
+    min-height: 60vh;
+    margin: 150px auto;
+}
+
+.right {
+    border: 8px solid black;
+    max-width: 400px;
+    float: right;
+    margin: 20px;
+}
+
+.rightGui {
+    border: 8px solid black;
+    max-width: 450px;
+    float: right;
+    margin: 20px;
+}
+
+.left {
+    border: 8px solid black;
+    max-width: 400px;
+    float: left;
+    margin: 20px;
+}
+
+.leftRock {
+    border: 8px solid black;
+    max-width: 600px;
+    float: left;
+    margin: 20px;
+}
+
+
+.rightOlympic {
+    border: 8px solid black;
+    max-width: 540px;
+    float: right;
+    margin: 20px;
+}
+
+.photoCenterText {
+    padding-top: 100px;
+    
+}
+
+.photoCenter h3 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 40px;
+    text-align: center;
+    padding-bottom: 40px;
+}
+
+.photoCenter p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    text-align: center;
+    padding-right: 30px;
+}
+
+.photoRightTextJim   {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    text-align: right;
+    padding-left: 30px;
+    padding-top: 250px;
+    margin-bottom: 500px;
+}
+
+.photoRightTextJim h3 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 40px;
+    text-align: center;
+    padding-bottom: 40px;
+}
+
+/* LEFT */
+.photoLeft {
+    padding: 50px;
+    justify-content: center;
+    align-items: center;
+    min-height: 50vh;
+    margin: 150px auto;
+}
+
+.photoLeft img {
+    border: 8px solid black;
+    max-width: 800px;
+    float: left;
+    margin-right: 30px; 
+}
+
+.leftImg6 {
+    border: 8px solid black;
+    max-height: 1500px;
+    float: left;
+    margin: 20px;
+    
+}
+
+.leftJim {
+    border: 8px solid black;
+    max-height: 1000px;
+    float: left;
+    margin: 20px;
+    
+    
+
+}
+
+
+.photoLeftText {
+    padding-top: 130px;
+    padding-right: 30px;
+}
+.photoLeftText h3 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 40px;
+    text-align: center;
+    padding-bottom: 40px;
+}
+
+.photoLeft p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    text-align: right;
+    padding-left: 30px;
+}
+
+.photoLeftTextImg6 h3  {
+    font-family: 'Poppins', sans-serif;
+    font-size: 40px;
+    text-align: center;
+    padding-bottom: 120px;
+    padding-top: 100px;
+}
+
+.photoLeftTextImg6 p  {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    text-align: right;
+    padding-left: 30px;
+    margin-bottom: 1000px;
+}
+
+.endingLine h2 {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 50px;
+}
+
+
