--- a/style.css
+++ b/style.css
@@ -700,4 +700,31 @@ nav ul li a:hover {
     font-size: 50px;
 }
 
+/* PSCC */
+.hero6 {
+    font-family: 'Poppins', sans-serif;
+    height: 100vh;
+    width: 100%;
+    background-image: url("IMG13.jpg");
+    background-size: cover;
+    background-position: center;
+    
+}
+
+.title6 {
+    letter-spacing: 3rem;    
+    color: white;
+    font-size: 40px;
+    margin: 0;
+    padding-top: 300px;
+    padding-left: 70px;
+    text-align: center;
+    /* position: absolute; */
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);    
+    text-shadow: 10px 15px 20px black;
+    font-family: 'Times New Roman', Times, serif;
+}
+
 
