--- a/style.css
+++ b/style.css
@@ -751,4 +751,28 @@ nav ul li a:hover {
     font-size: 20px;
 }
 
+.InterviewReflection h2 {
+    padding-top: 200px;
+    padding-bottom: 50px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 50px;
+}
+
+.InterviewReflection img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+    max-width: 50%;
+    border: 10px solid black;
+}
+
+.InterviewReflection p {
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    padding: 60px 200px 40px 200px;
+    font-size: 20px;
+}
+
 
