--- a/style.css
+++ b/style.css
@@ -775,4 +775,59 @@ nav ul li a:hover {
     font-size: 20px;
 }
 
+.PD h2 {
+    padding-top: 200px;
+    padding-bottom: 50px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 50px;
+}
 
+.PD h3 {
+    padding-top: 100px;
+    padding-bottom: 50px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 40px;
+}
+
+.PD img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+    max-width: 50%;
+    border: 10px solid black;
+}
+
+.PD p {
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    padding: 60px 200px 40px 200px;
+    font-size: 20px;
+}
+
+.OrgInterviewReflection h2 {
+    padding-top: 200px;
+    padding-bottom: 50px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 50px;
+}
+
+.OrgInterviewReflection img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+    max-width: 50%;
+    border: 10px solid black;
+}
+
+.OrgInterviewReflection p {
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    padding: 60px 200px 40px 200px;
+    font-size: 20px;
+}
